<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshDetailBook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.detailBook.DetailBookActivity">

    <LinearLayout
        android:id="@+id/lnrDetailBook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorWhite"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="220dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imgBook"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/jdlBuku"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center"
                            android:text="@string/judul_buku"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/namaPengarang"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="16dp"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="@color/colorBlackText" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:background="@drawable/full_shape_elevation"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/txtCategory"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="8dp"
                                android:gravity="center"
                                android:text=""
                                android:textColor="@color/colorBlack"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/sinopsis"
                        android:textColor="@color/colorBlackText"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/txtSinopsisBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text=""
                        android:textColor="@color/colorBlackText"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtBukuMirip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/buku_yang_mirip"
                    android:textColor="@color/colorBlackText"
                    android:textSize="22sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDetailBookRelated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/btnLihatPenulis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/full_shape_elevation">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:layout_margin="16dp"
                        android:text="@string/lihat_penulis"
                        android:textColor="@color/colorBlack"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>